# DFCacheDelete

./: README.md
DFcachedelete/: CMakeLists.txt  installer.iss
DFcachedelete/src/: CacheScanner.h  FavoritesManager.h  MainWindow.cpp  main.cpp
src/: CacheScanner.cpp  FavoritesManager.cpp  MainWindow.h  resources.qrc
